# Voxtral-4B-TTS-2603-MLX

./: LICENSE  README.md  pyproject.toml
scripts/: benchmark.py
src/voxtral_mlx/: __init__.py  acoustic_transformer.py  backbone.py  generate.py  load_weights.py  vocoder.py
